<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">Wandroid</string>

    <string name="my_collect">我的收藏</string>
    <string name="nav_todo">TODO</string>
    <string name="nav_night_mode">夜间模式</string>
    <string name="nav_day_mode">日间模式</string>
    <string name="setting">设置</string>
    <string name="about_us">关于</string>
    <string name="logout">退出登录</string>
    <string name="login_in">登录</string>
    <string name="navigation_drawer_open">Open drawer</string>
    <string name="navigation_drawer_close">Close drawer</string>

    <!-- Search -->
    <string name="action_search">Search</string>
    <string name="history_search">Search History</string>
    <string name="hot_search">热搜</string>
    <string name="useful_sites">Useful Sites</string>
    <string name="clear_all">Clear All</string>
    <string name="search_tint">搜索历史</string>
    <string name="search_null_tint">全部清除</string>
    <string name="go_search">快去搜索更多历史吧</string>

    <!-- Login -->
    <string name="login">登录</string>
    <string name="account">注册</string>
    <string name="register">重复密码</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="no_account">没有账号？前去注册</string>
    <string name="login_success">login success</string>
    <string name="login_fail">login fail</string>
    <string name="logout_fail">logout fail</string>
    <string name="enter_password_again">enter password again</string>
    <string name="have_account">已有账号，前去登录</string>
    <string name="username_not_empty">User name cannot be empty</string>
    <string name="password_not_empty">Password cannot be empty</string>
    <string name="re_password_not_empty">Confirmation password cannot be empty</string>
    <string name="twice_password_not_same">The passwords entered twice are different</string>
    <string name="register_success">register success</string>
    <string name="register_fail">register fail</string>
    <string name="logging_in">Logging…</string>
    <string name="logging_out">Logout…</string>
    <string name="registering">Registering…</string>
    <string name="login_first">Please login first</string>

    <!-- home pager -->
    <string name="home_pager">主页</string>
    <string name="knowledge_hierarchy">知识体系</string>
    <string name="navigation">导航</string>
    <string name="wx_article">公众号</string>
    <string name="project">项目</string>
    <string name="failed_to_obtain_article_list">Failed gets the article list data</string>
    <string name="failed_to_obtain_banner_data">Failed to obtain advertising data</string>
    <string name="article_top">TOP</string>
    <string name="article_new">NEW</string>

    <!-- collect -->
    <string name="collect">Collect</string>
    <string name="cancel_collect">Cancel collect</string>
    <string name="failed_to_obtain_collect_list">Failure to get collections of articles</string>
    <string name="failed_to_cancel_collect">Failure to Cancel Collection</string>
    <string name="collect_success">Collect success</string>
    <string name="collect_failed">Collect failed</string>

    <!-- Common -->
    <string name="http_error">network anomaly</string>
    <string name="unKnown_error">unKnown error</string>
    <string name="double_click_exit_toast">再按一下退出WanAndroid</string>
    <string name="loading">Loading</string>
    <string name="failed_to_get_navigation_data">Failed to get navigation data</string>
    <string name="failed_to_get_project_data">Failed to get project data</string>
    <string name="failed_to_get_knowledge_hierarchy_data">Failed to get knowledge hierarchy data</string>
    <string name="failed_to_get_wx_chapters_data">Failed to get wx chapters data</string>
    <string name="in_the_process">In the process of development, please look forward to it.</string>

    <!-- Setting detail -->
    <string name="cache_setting">缓存设置</string>
    <string name="clear_cache">清空缓存</string>

    <!-- Article detail -->
    <string name="share">Share</string>
    <string name="open_it_with_browser">Open it with the system browser</string>
    <string name="share_type_url" translatable="false">%1$sShare【%2$s】special top：%3$s</string>
    <string name="write_permission_not_allowed">Gets write permission failed</string>

    <!-- behavior -->
    <string name="scale_down_show_behavior" translatable="false">com.forgetsky.wanandroid.widget.behavior.ScaleDownShowBehavior</string>

    <!-- about -->
    <string name="about_upgrade">Upgrade</string>
    <string name="about_website">About website</string>
    <string name="about_source_code">Source code</string>
    <string name="about_copyright">Copyright</string>
    <string name="about_feedback">Feedback</string>

    <!-- todo -->
    <string name="todo_title">TODO</string>
    <string name="todo">Todo</string>
    <string name="done_todo">Done</string>
    <string name="todo_all">All</string>
    <string name="todo_work">Work</string>
    <string name="todo_study">Study</string>
    <string name="todo_life">Life</string>
    <string name="todo_other">Other</string>
    <string name="failed_to_obtain_todo_list">Failed gets the todo list data</string>
    <string name="tv_add_todo_title">Title:</string>
    <string name="tv_add_todo_content">Content:</string>
    <string name="tv_add_todo_label">Label:</string>
    <string name="tv_add_todo_priority">Priority:</string>
    <string name="tv_add_todo_date">Date:</string>
    <string name="hint_add_todo_not_null">not null</string>
    <string name="hint_add_todo_null_able">null able</string>
    <string name="todo_no_label">No Label</string>
    <string name="todo_priority_1">Important</string>
    <string name="todo_priority_2">General</string>
    <string name="todo_edit_title">Edit</string>
    <string name="todo_new_title">New</string>
    <string name="bt_todo_save">Save</string>
    <string name="bt_choose_label">Choose Label</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="add_todo_success">Add todo success</string>
    <string name="add_todo_failed">Add todo failed</string>
    <string name="update_todo_success">Update success</string>
    <string name="update_todo_failed">Update failed</string>
    <string name="update_todo_status_success">Completed</string>
    <string name="update_todo_status_failed">Update status failed</string>
    <string name="delete_todo_success">Delete success</string>
    <string name="delete_todo_failed">Delete failed</string>
    <string name="saving">saving…</string>
    <string name="marked_completed">Marked completed</string>
    <string name="marked_todo">Marked todo</string>
    <string name="delete_todo">Delete</string>
    <string name="confirm_delete_todo">Confirm delete</string>

    <string name="copyright_content">This APP is completely open source, only for learning and communication, not for any commercial use.</string>
    <string name="mainshouye">主页</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="loginuser">用户名</string>

</resources>
